Fixes to kafala & foundation

--- a/Kafala.Web.UI/Views/Commitment/Create.cshtml
+++ b/Kafala.Web.UI/Views/Commitment/Create.cshtml
@@ -4,5 +4,6 @@
 <h2>Assign Case To Donor</h2>
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new { @class = "well validated", id = "autoForm" }))
 {
-    @Html.DynamicForm();
+    @Html.DynamicForm()
+        @Html.Partial("_FormButtons")
 }
