--- a/Kafala.Web.UI/Views/Donor/Index.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@using Kafala.Web.ViewModels.Donor;
+﻿@using Foundation.Web.Paging
+@using Foundation.Web.Sorter
+@using Kafala.Web.ViewModels.Donor;
 @model DonorIndexViewModel
 
 @{
