--- a/Kafala.Web.UI/Views/Commitment/Edit.cshtml
+++ b/Kafala.Web.UI/Views/Commitment/Edit.cshtml
@@ -5,5 +5,6 @@
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
 {
     @Html.DynamicForm()
+        @Html.Partial("_FormButtons")
 
 }
