--- a/Kafala.Web.UI/Views/DonationCase/Edit.cshtml
+++ b/Kafala.Web.UI/Views/DonationCase/Edit.cshtml
@@ -5,6 +5,6 @@
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
 {
     @Html.DynamicForm()
-   
+       @Html.Partial("_FormButtons")
 }
 
