--- a/Kafala.Web.UI/Views/DonationCase/Index.cshtml
+++ b/Kafala.Web.UI/Views/DonationCase/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Kafala.Web.ViewModels.DonationCase;
+﻿@using Foundation.Web.Paging
+@using Kafala.Web.ViewModels.DonationCase;
 @model ListDonationCaseViewModel
 
 @{
