--- a/Kafala.Web.UI/Views/Donor/Create.cshtml
+++ b/Kafala.Web.UI/Views/Donor/Create.cshtml
@@ -8,6 +8,6 @@
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well validated" ,id = "autoForm" }))
 {
     @Html.DynamicForm()
-   
+       @Html.Partial("_FormButtons")
 }
 
