--- a/Kafala.Web.UI/Views/Payment/Create.cshtml
+++ b/Kafala.Web.UI/Views/Payment/Create.cshtml
@@ -6,7 +6,8 @@
 <h2>Register Payment For Donor</h2>
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
 {
-    @Html.DynamicForm();
+    @Html.DynamicForm()
+        @Html.Partial("_FormButtons")
 }
 
 
