--- a/Kafala.Web.UI/Views/PaymentPeriod/Create.cshtml
+++ b/Kafala.Web.UI/Views/PaymentPeriod/Create.cshtml
@@ -5,7 +5,8 @@
 <h2>Register Payment For Donor</h2>
 @using (var form = Html.Bootstrap().BeginForm(BootstrapFormType.Horizontal, new {@class= "well" ,id = "autoForm" }))
 {
-    @Html.DynamicForm();
+    @Html.DynamicForm()
+        @Html.Partial("_FormButtons")
 }
 
 
